base/api-gateway-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-port
spec:
  type: ClusterIP
  ports:
    - name: app-port
      port: 8080
      targetPort: 8080
    - name: debug-port
      port: 5005
      targetPort: 5005
  selector:
     name: api-gateway
